$Id: ChangeLog,v 1.92 2004/10/16 09:28:16 h_oudejans Exp $

2004-11-06 Manuel Bilderbeek <manuel@msxnet.org>
	* Removed all .Cas stuff, and replaced it by two cassetteplayer
	  controls, which still need to be made functional. Thanks to Herman
	  for finding some bugs. See his commit of today :)

2004-10-16 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed a problem with inserting a disk while openMSX is running.
	* Fixed a problem with change focus and diskb (value from
	   diska was taken instead of diskb).

2004-10-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Paths are now saved as soon as the openMSX config dialog
	   is closed.

2004-10-10 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed printerport plugin mechanism.
	* Instead of using LaunchMode, every openMSX reply
	   is linked to a handler-target. This can be either the
	   interactive handler code or the automatic startup code.
	   Advantage is that commands are no longer ignored, even
	   at startup (Thanks to BifiMsx, Albert Beevendorp, for this
	   solution).

2004-10-08 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed printerlogger pluggable
	* removed tear-off option from menu's
	* Disabled labels of disabled controls
	* Fixed a problem in the startup script
	* Added Save settings at exit (menu check)

2004-10-06 Herman Oudejans <hn.oudeans@quicknet.nl>
	* Added support for the 'firmwareswitch' setting.

2004-10-04 Herman Oudejans
	* Browse file buttons are now picture buttons
	* Catapult now sends an 'unplug' before sending 'plug'
	* Minor clean ups.

2004-10-03 Herman Oudejans <hn.oudeans@quicknet.nl>
	* Joystick settings are now saved.
	* Provided user feedback for screenshot without parameters
	* Added printerport functionality	

2004-10-02 Herman Oudejans <hn.oudeans@quicknet.nl>
	* Added Screenshot support
	* 'Grab' and 'Type' buttons are now disabled until openMSX runs
	* fixed initial state of the mute button

2004-10-02 Manuel Bilderbeek <manuel@msxnet.org>